# OSINT-Tool

./: LICENSE  README.md  pyproject.toml
src/: main.py  target.py
src/modules/: email_checker.py  social_media_checker.py
