[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-tool"
version = "0.1.0"
authors = [
  { name="Oliver Mikielewicz", email="oliver.mik88@gmail.com" },
]
description = "A comprehensive OSINT tool for checking social media presence based on various inputs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Add all your project's dependencies here
dependencies = [
    "requests",
    "aiohttp",
    "rich", # For pretty printing, if you use it
    "holehe"
]

[project.scripts]
# This line creates the command-line command
# "osint-tool" will run the "main" function inside your "src/main.py" file
osint-tool = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}