[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-tool"
version = "0.1.0"
authors = [
  { name = "Oliver Mikielewicz", email = "189676981+CheetahCS@users.noreply.github.com" },
]
description = "A comprehensive OSINT tool for checking social media presence based on various inputs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# Add all project's dependencies here
dependencies = ["requests", "aiohttp", "rich"]

[project.scripts]
# This line creates the command-line command
# "osint-tool" will run the "main" function inside "src/main.py" file
osint-tool = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
